# pyqtGUITrader

./: BUILD.bat  BaseEnums.py  Broker.py  README.md  TradingGUI.py  config.py  main.py  new_main.py  pyproject.toml  requirements.txt  run.bat  trading_assistant.spec  trading_thread.py
Utils/: FyersManualLoginHelper.py  OptionSymbolBuilder.py  OptionUtils.py  Quants.py  Utils.py  common.py  notifier.py  safe_getattr.py  session_utils.py  structured_logger.py  time_utils.py  timing.py
backtest/: backtest_candle_debug_tab.py  backtest_candle_debugger.py  backtest_engine.py  backtest_help_tab.py  backtest_option_pricer.py  backtest_thread.py  backtest_window.py
broker/: AliceBlueBroker.py  AngelOneBroker.py  BaseBroker.py  Broker.py  BrokerFactory.py  DhanBroker.py  FlattradeBroker.py  FyersBroker.py  IciciBroker.py  KotakNeoBroker.py  ShoonyaBroker.py  TokenExpiryHandler.py  UpstoxBroker.py  ZerodhaBroker.py  __init__.py  broker_config_guard.py
config/: brokerage_setting.json  daily_trade_setting.json  fyers_token.json  holidays.json  old-trading.db  profit_stoploss_setting.json  strategy_setting.json  trading.db  trading_mode.json
data/: candle_store.py  candle_store_manager.py  history_manager.py  trade_state.py  trade_state_manager.py  websocket_manager.py
db/: __init__.py  config_crud.py  connector.py  crud.py  db_installer.py  migrate.py  strategy_crud.py
gui/: BrokerageSetting.py  BrokerageSettingGUI.py  Brokerloginpopup.py  DailyTradeSetting.py  DailyTradeSettingGUI.py  FyersManualLoginPopup.py  ProfitStoplossSetting.py  ProfitStoplossSettingGUI.py  StatsTab.py  StrategySetting.py  StrategySettingGUI.py  TextHandler.py  TradeHistoryViewer.py  TradingModeSetting.py  TradingModeSettingGUI.py  app_status_bar.py  chart_widget.py  daily_pnl_widget.py  dialog_base.py  indicator_builder_dialog.py  loading_mixin.py  log_handler.py  onboarding_popup.py  splash_screen.py  stats_tab.py  status_panel.py  theme_manager.py  unified_settings_GUI.py
hooks/: rthook_appdata.py
license/: activation_dialog.py  auto_updater.py  license_manager.py
logs/: trades_2026-02-19.csv
models/: Candle.py  settings_manager.py  trade_state.py  trade_state_manager.py
scripts/: build.py  build_installer.nsi
server/: server_api_example.py
strategy/: dynamic_signal_engine.py  indicator_columns.py  indicator_registry.py  multi_tf_filter.py  strategy_editor_window.py  strategy_help_tab.py  strategy_manager.py  strategy_picker_sidebar.py  strategy_presets.py  (+1 more)
(+40 files in other folders)
