[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "trading-assistant"
version = "1.0.0"
description = "Personal AI Trading Assistant — automated options trading for Indian markets"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }

dependencies = [
    # GUI
    "PyQt5>=5.15",

    # Data / numerics
    "pandas>=2.0",
    "numpy>=1.24",
    "python-dateutil>=2.8",
    "pytz>=2024.1",

    # HTTP
    "requests>=2.31",
    "websocket-client>=1.6",

    # Crypto / TOTP (used by several brokers)
    "pyotp>=2.9",
    "cryptography>=42.0",

    # Database (SQLite ORM) — 2.0.37+ required for Python 3.13 compatibility
    "sqlalchemy>=2.0.37",

    # Packaging utilities
    "packaging>=24.0",
]

[project.optional-dependencies]
# Install only the broker SDKs you actually use
fyers     = ["fyers-apiv3>=3.0"]
zerodha   = ["kiteconnect>=5.0"]
dhan      = ["dhanhq>=2.0"]
angelone  = ["smartapi-python>=1.3", "logzero>=1.7"]
upstox    = ["upstox-python-sdk>=2.9"]
shoonya   = ["NorenRestApiPy>=0.0.26"]
flattrade = ["NorenRestApiPy>=0.0.26"]
icici     = ["breeze-connect>=1.0"]
aliceblue = ["pya3>=1.0"]

# All broker SDKs at once
all-brokers = [
    "trading-assistant[fyers,zerodha,dhan,angelone,upstox,shoonya,flattrade,icici,aliceblue]",
]

# Development / testing extras
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
    "black>=24.0",
]

[project.scripts]
trading-assistant = "main:main"

[project.gui-scripts]
# On Windows this suppresses the console window
TradingAssistant = "main:main"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "docs*", "backups*", "__pycache__*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.png", "*.ico", "*.svg", "*.ui"]

# ── Ruff (linting) ────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",   # do not call functions as default args — common in Qt code
]

# ── Mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true